unpackaged/main/default/objects/nbavs__GroupMember__c/nbavs__GroupMember__c.object-meta.xml
<CustomObject>
    <label>Group Member</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>