unpackaged/main/default/objects/nbavs__GroupMember__c/fields/nbavs__Allow_Insight_Access__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Allow_Insight_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Insight Access Deprecated</label>
    <type>Checkbox</type>
</CustomField>