unpackaged/main/default/objects/nbavs__GroupMember__c/fields/nbavs__GroupPickup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__GroupPickup__c</fullName>
    <formula>&#39;*6&#39; + nbavs__User__r.nbavs__SipExtension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Pickup</label>
    <type>Text</type>
</CustomField>