unpackaged/main/default/objects/nbavs__GroupMember__c/fields/nbavs__LoggedIn__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LoggedIn__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Logged In (for Calls)</label>
    <type>Checkbox</type>
</CustomField>