unpackaged/main/default/objects/nbavs__GroupMember__c/fields/nbavs__Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Name__c</fullName>
    <formula>nbavs__User__r.Name</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>