unpackaged/main/default/objects/nbavs__GroupMember__c/fields/nbavs__Primary__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>